--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" type="text/css" href="style.css"><meta charset="utf-8"><title>Untitled Document.md</title><script type="text/javascript">
+<!DOCTYPE html><html><head><link rel="stylesheet" type="text/css" href="css/style.css"><meta charset="utf-8"><title>Untitled Document.md</title><script type="text/javascript">
 //<![CDATA[
 window.__cfRocketOptions = {byc:0,p:0,petok:"31d815026cdfa9c73efa704d543be6e2c28f6dbb-1517878735-1800"};
 //]]>
@@ -6,7 +6,7 @@ window.__cfRocketOptions = {byc:0,p:0,petok:"31d815026cdfa9c73efa704d543be6e2c28
 <script type="text/javascript" src="https://ajax.cloudflare.com/cdn-cgi/scripts/b7ef205d/cloudflare-static/rocket.min.js"></script>
 <style></style></head><body id="preview">
 <h1 class="h1"><a id="Dao_of_Web_Design_0"></a><em>Dao of Web Design</em></h1>
-<section class="photo"><img src="https://github.com/clairedii12/ebb-and-flow-/blob/master/webauthoringdrawing.png?raw=true" alt="Alt Text"></p>
+<section class="photo"><img src="https://github.com/clairedii12/ebb-and-flow-/blob/master/img/webauthoringdrawing.png?raw=true" alt="Alt Text"></p>
 <p class="summary">After reading Dao of web design it’s safe to say that no longer does one view the work of web design as just coding. People who have been invested in the production of web design/coding view it more as a religion, which sounds odd. John Allsop illustrates just how web design is related to daoism. He makes sure to include every aspect that can be related back to the initial idea of design. He refers to the web as a type of medium and that all new things are created from the roots of the world wide web.</p>
 <p class="summary">The article touches on many subjects such as, the web designer’s control over the internet, how to adapt to the control and how to make it accessible. When the designer needs to control something they also need to learn not to take ownership of them. Allsop states “Let your design flow from the services which they will provide to your users, rather than from some overarching idea of what you want pages to look like.” this seems contradictory of what designers do. Although what allsop means is that even though design/look of web page is important, it needs to flow in order to be aesthetically pleasing for people to return to the website.</p>
 <p class="summary">Though Allsop touches on the idea of having control the only way to get there is if you let the flow follow the function, which means you need to be very flexible for whatever you are creating. Ebb and flow is the building blocks of a good website.</p>
